fdo#66543: fixed line number attribute START VALUE wasnt imported and exported

Change-Id: I09e0356f994f5eb328f741723ac7dbfea51419ed